# be/src/courses/dto/admin-create-course.dto.ts
@@ -1,0 +1,29 @@
+import {
+  IsBoolean,
+  IsIn,
+  IsNotEmpty,
+  IsOptional,
+  IsString,
+} from 'class-validator';
+
+export class AdminCreateCourseDto {
+  @IsString()
+  @IsNotEmpty()
+  title: string;
+
+  @IsString()
+  @IsNotEmpty()
+  description: string;
+
+  @IsString()
+  @IsNotEmpty()
+  language: string;
+
+  @IsString()
+  @IsIn(['draft', 'active', 'inactive'])
+  status: string;
+
+  @IsBoolean()
+  @IsOptional()
+  isPaid?: boolean;
+}
